k8s/naybxrz-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: naybxrz-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    networking.gke.io/managed-certificates: naybxrz-certificate
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: "auth.naybxrz.com"
    http:
      paths:
      - path: /*
        backend:
          serviceName: keycloak
          servicePort: 80
  - host: "admin.naybxrz.com"
    http:
      paths:
      - path: /tracing
        backend:
          serviceName: jaeger-query
          servicePort: 80
  - host: "admin.naybxrz.com"
    http:
      paths:
      - path: /*
        backend:
          serviceName: naybxrz-admin
          servicePort: 80
  - host: "api.naybxrz.com"
    http:
      paths:
      - path: /*
        backend:
          serviceName: api-gateway
          servicePort: 80
  - host: "naybxrz.com"
    http:
      paths:
      - path: /*
        backend:
          serviceName: naybxrz-ui
          servicePort: 80
  - host: "www.naybxrz.com"
    http:
      paths:
      - path: /*
        backend:
          serviceName: naybxrz-ui
          servicePort: 80
